さくらのクラウド オブジェクトストレージに画像をアップロードしてみた。

--- a/src/MegamiManager/appsettings.json
+++ b/src/MegamiManager/appsettings.json
@@ -5,6 +5,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MegamiManager-4e525fa9-ea49-4904-9fa5-ed8f45b1e1d9;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "StorageKey": "megami-device",
+  "StorageSecret": "xxx",
+  "BucketName": "megami-device",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
