--- a/src/MegamiManager/appsettings.json
+++ b/src/MegamiManager/appsettings.json
@@ -3,17 +3,18 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MegamiManager-4e525fa9-ea49-4904-9fa5-ed8f45b1e1d9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost;userid=megamidevice;pwd=megamidevicepw;port=3306;database=megamidevice;sslmode=none;",
+    "DefaultConnectionDefault": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MegamiManager-4e525fa9-ea49-4904-9fa5-ed8f45b1e1d9;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "StorageKey": "megami-device",
-  "StorageSecret": "xxx",
-  "BucketName": "megami-device",
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "StorageKey": "megami-device",
+    "StorageSecret": "xxx",
+    "BucketName": "megami-device",
+    "Logging": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     }
   }
-}
