--- a/src/MegamiManager/project.json
+++ b/src/MegamiManager/project.json
@@ -32,9 +32,7 @@
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
-    "Microsoft.Extensions.Logging": "1.0.0",
-    "Microsoft.Extensions.Logging.Console": "1.0.0",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0",
+    "Microsoft.Extensions.Logging.Console": "1.1.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
@@ -46,7 +44,10 @@
       "type": "build"
     },
     "AWSSDK.S3": "3.3.5.3",
-    "MySql.Data.EntityFrameworkCore": "7.0.6-IR31"
+    "MySql.Data.EntityFrameworkCore": "7.0.6-IR31",
+    "Pomelo.EntityFrameworkCore.MySql": "1.1.1-prerelease-10017",
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Extensions.Logging.Debug": "1.1.0"
   },
 
   "tools": {
