SendGrid でメールを送信するようにした。

--- a/src/MegamiManager/appsettings.json
+++ b/src/MegamiManager/appsettings.json
@@ -3,18 +3,21 @@
     "InstrumentationKey": ""
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=megamidevice;pwd=megamidevicepw;port=3306;database=megamidevice;sslmode=none;",
+    "DefaultConnection": "server=localhost;userid=megamidevice;pwd=megamidevicepw;port=3306;database=megamidevice;sslmode=none;Convert Zero Datetime=True;",
     "DefaultConnectionDefault": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MegamiManager-4e525fa9-ea49-4904-9fa5-ed8f45b1e1d9;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-    "StorageKey": "megami-device",
-    "StorageSecret": "xxx",
-    "BucketName": "megami-device",
-    "Logging": {
-      "IncludeScopes": false,
-      "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
-      }
+  "StorageKey": "megami-device",
+  "StorageSecret": "xxx",
+  "BucketName": "megami-device",
+  "ImageProxyBase": "https://megami-image.7474.jp/",
+  "SendGridFrom": "xxx",
+  "SendGridKey": "xxx",
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
+}
