--- a/src/MegamiManager/project.json
+++ b/src/MegamiManager/project.json
@@ -47,7 +47,8 @@
     },
     "AWSSDK.S3": "3.3.5.3",
     "MySql.Data.EntityFrameworkCore": "7.0.6-IR31",
-    "Microsoft.AspNetCore.Authentication.Twitter": "1.0.1"
+    "Microsoft.AspNetCore.Authentication.Twitter": "1.0.1",
+    "Sendgrid": "9.0.7"
   },
 
   "tools": {
